fix🐛: fixed project display on mobile

--- a/app/embla.css
+++ b/app/embla.css
@@ -13,7 +13,7 @@
   max-width: 100%;
   margin-top: auto;
   margin-bottom: auto;
-  margin-left: 1.5rem;
+  margin-left: auto;
   margin-right: auto;
   --slide-height: 15rem;
   --slide-spacing: 1rem;
